--- a/popup.css
+++ b/popup.css
@@ -10,7 +10,7 @@ body{
   height: 40px;
   width: 30%;
   border: 2px solid #BFC0C0;
-  margin: 20px 20px 20px 20px;
+  margin: 20px;
   color: #BFC0C0;
   text-transform: uppercase;
   text-decoration: none;
